# rubiksbot

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: benchmark.rs
src/: gpio.rs  main.rs  motor.rs
src/camera/: ecc.rs  mod.rs
