[package]
name = "rubiksbot"
version = "0.1.0"
edition = "2021"

[dependencies]
adafruit_motorkit = { git = "https://github.com/Ursus-GIT5805/adafruit_motorkit" }
rubikscube = { git = "https://github.com/Ursus-GIT5805/rubikscube" }

linux-embedded-hal = "0.4.0"
pwm-pca9685 = "1.0.0"
rppal = "0.19.0"
strum = "0.26.3"

opencv = { version = "0.93.1", default-features = false, features = [
		"calib3d",
		"imgproc",
		"highgui",
		"videoio",
		]}
