[package]
name = "rubiksbot"
version = "0.1.0"
edition = "2021"

[dependencies]
rubikscube = { git = "https://github.com/Ursus-GIT5805/rubikscube" }

adafruit_motorkit = "0.2"
linux-embedded-hal = "0.4.0"
pwm-pca9685 = "1.0.0"
rppal = "0.19.0"
strum = "0.26.3"

opencv = { version = "0.93.1", default-features = false, features = [
		"calib3d",
		"imgproc",
		"highgui",
		"videoio",
		]}
